[OS/2] Bug 493428: adapt calculation of zeroOrAveCharWidth to what the other platforms do (using glyph advance instead of glyph width), to fix dialog widths that appear to narrow